--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -182,7 +182,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="btn-group" role="group" aria-label="Basic example">
                       <button type="button" class="btn btn-danger" id="btnPDF" >
                         <i class="mdi mdi-file-pdf btn-icon-prepend" onclick="downloadDoc()"></i>PDF</button>
-                      <button type="button" class="btn btn-success" id="btnExcel">
+                      <button type="button" class="btn btn-success" id="btnExcel" onclick="requestDescargar()">
                         <i class="mdi mdi-file-excel btn-icon-prepend"></i>Excel</button>
                 <!--FIN BOTONES PARA CONVERTIR-->       
             </div>
@@ -237,12 +237,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //bootstrap-modal-pop-up -->
     <!-- js -->
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+    
     <!-- for bootstrap working -->
     <script src="js/bootstrap.js"></script>
     <!-- //for bootstrap working -->
     <!-- //js -->
     <!-- //here starts scrolling icon -->
-    <script src="js/SmoothScroll.min.js"></script>
+   <script src="js/SmoothScroll.min.js"></script>
+    
     <script type="text/javascript" src="js/move-top.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
     <script type="text/javascript" src="js/convertir.js"></script>
