--- a/views/vista_report.hbs
+++ b/views/vista_report.hbs
@@ -174,9 +174,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </tr>
                             </thead>
                             <tbody id="contenido">
-                                <td colspan="7" class="text-center"> No se encontraron registros </td>
+                                
                             </tbody>
                         </table>
+                        <button type='button' class='btn btn-outline-warning' onclick='addpaginasvista()'>+</button>
+                        <button type='button' class='btn btn-outline-warning' onclick='respaginasvista()'>-</button>
                     </div>
                      <!--BOTONES PARA CONVERTIR-->
                 <div class="btn-group" role="group" aria-label="Basic example">
