--- a/views/administrador.hbs
+++ b/views/administrador.hbs
@@ -125,7 +125,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                 </tr>
                             </thead>
                             <tbody id="contenido">
-                                <td colspan="7" class="text-center"> No se encontraron registros </td>
+                                
                             </tbody>
                         </table>
                         <button type='button' class='btn btn-outline-warning' onclick='addpaginas()'>+</button>
@@ -267,20 +267,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         "   <input type='text' class='form-control' id='inputPrecioA' placeholder='Ingrese el precio actualizado' required>"+
         "   <input type='text' class='form-control' id='inputPotenciaPsA' placeholder='Ingrese la potencia actualizado' required>"+
         "   <input type='text' class='form-control' id='inputCodigoPostalA' placeholder='Ingrese el codigo postal actualizado' required> <br>"+
-        "   <button type='button' class='btn btn-outline-warning' onclick='insertar_registros()'>Aplicar</button>";
+        "   <button type='button' class='btn btn-outline-warning' onclick='actualizar_registros()'>Aplicar</button>";
     }
 
     function eliminar() {        
         return document.getElementById("contenido_administrador").innerHTML = "<div class='row g-3'>" +
         "   <input type='text' class='form-control' id='inputSkCarro' placeholder='Ingrese el sk_carro a eliminar' required>" +
-        /*"   <input type='text' class='form-control' id='inputSkRevision' placeholder='Ingrese el sk_revision a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputSkVentas' placeholder='Ingrese el sk_ventas a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputSkConcesionario' placeholder='Ingrese el sk_concesionario a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputSkFecha' placeholder='Ingrese el sk_fecha a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputKilometro' placeholder='Ingrese el kilometraje a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputPrecio' placeholder='Ingrese el precio a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputPotenciaPs' placeholder='Ingrese la potencia a eliminar' required>"+
-        "   <input type='text' class='form-control' id='inputCodigoPostal' placeholder='Ingrese el codigo postal a eliminar' required> <br>"+*/
         "   <button type='button' class='btn btn-outline-warning' onclick='eliminar_registros()'>Aplicar</button>";
     }
     </script>
