--- a/views/login.hbs
+++ b/views/login.hbs
@@ -137,6 +137,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     <b></b>
                 </div>
             </div>
+            </div>
         </div>
         <!-- footer -->
         <div class="footer">
