--- a/views/registrarse.hbs
+++ b/views/registrarse.hbs
@@ -88,11 +88,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                             <ul class="dropdown-menu">
                                                 <li><a href="/login">Login</a></li>
                                                 <li><a href="/registrarse">Registrarse</a></li>
-                                            </ul>
+                                            </ul>                                        
                                         </li>
                                         <li><a href="/contact">Contáctenos</a></li>
                                     </ul>
-
                                 </nav>
                             </div>
                         </nav>
@@ -133,6 +132,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                     </div>
                     <b></b>
+                </div>
                 </div>
             </div>
         </div>
